--- a/data/leastwood-74.json
+++ b/data/leastwood-74.json
@@ -1,5 +1,5 @@
 {
-  "contest": "Perennial Finance contest",
+  "contest": 60,
   "handle": "leastwood",
   "address": "0xeD7DF3fA78052060e76b5E12e1f76Cef2BB65d26",
   "risk": "2",
